--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ section:not(.wrapper, .textline) {
 }
 
 h1 {
-  font-size: clamp(3.45rem, 10vw, 5.55rem);
+  font-size: clamp(3.25rem, 10vw, 5.55rem);
 }
 
 h2 {
@@ -192,3 +192,12 @@ img{
     fill: var(--text-color);
   }
 } */
+
+@media (max-width: 450px) {
+  html {
+    scroll-snap-type: none;
+  }
+  section{
+    min-height: unset;
+  }
+}
